compiler-core/main/__generate/erlang/tests/snapshots/gleam_core____generate__erlang__tests__records__record_accessor_multiple_with_first_position_different_types.snap
---
source: compiler-core/src_refactored/__generate/erlang/tests/records.rs
assertion_line: 145
expression: "\npub type Person {\n    Teacher(name: Nil, age: Int)\n    Student(name: String, age: Int)\n}\npub fn get_age(person: Person) { person.age }"
snapshot_kind: text
---
----- SOURCE CODE

pub type Person {
    Teacher(name: Nil, age: Int)
    Student(name: String, age: Int)
}
pub fn get_age(person: Person) { person.age }

----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-define(FILEPATH, "project/test/my/mod.gleam").
-export([get_age/1]).
-export_type([person/0]).

-type person() :: {teacher, nil, integer()} | {student, binary(), integer()}.

-file("project/test/my/mod.gleam", 6).
-spec get_age(person()) -> integer().
get_age(Person) ->
    erlang:element(3, Person).
