compiler-core/main/__generate/erlang/tests/snapshots/gleam_core____generate__erlang__tests__records__record_constants.snap
---
source: compiler-core/src_refactored/__generate/erlang/tests/records.rs
assertion_line: 315
expression: "pub type Test { A }\nconst some_test = A\npub fn a() { A }"
snapshot_kind: text
---
----- SOURCE CODE
pub type Test { A }
const some_test = A
pub fn a() { A }

----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-define(FILEPATH, "project/test/my/mod.gleam").
-export([a/0]).
-export_type([test/0]).

-type test() :: a.

-file("project/test/my/mod.gleam", 3).
-spec a() -> test().
a() ->
    a.
