compiler-core/main/__generate/erlang/tests/snapshots/gleam_core____generate__erlang__tests__records__record_spread3.snap
---
source: compiler-core/src_refactored/__generate/erlang/tests/records.rs
assertion_line: 213
expression: "\npub type Triple {\n  Triple(a: Int, b: Int, c: Int)\n}\n\npub fn main() {\n  let triple = Triple(1,2,3)\n  case triple {\n    Triple(b: the_b, ..) -> the_b\n  }\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub type Triple {
  Triple(a: Int, b: Int, c: Int)
}

pub fn main() {
  let triple = Triple(1,2,3)
  case triple {
    Triple(b: the_b, ..) -> the_b
  }
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-define(FILEPATH, "project/test/my/mod.gleam").
-export([main/0]).
-export_type([triple/0]).

-type triple() :: {triple, integer(), integer(), integer()}.

-file("project/test/my/mod.gleam", 6).
-spec main() -> integer().
main() ->
    Triple = {triple, 1, 2, 3},
    case Triple of
        {triple, _, The_b, _} ->
            The_b
    end.
